--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main  # or 'master', depending on your default branch
+    workflow_dispatch:
+
 
 jobs:
   deploy:
